# Mistgos

./: .gitignore  Cargo.toml  README.md  linker.ld  x86_64-mistgos.json
.cargo/: config.toml
docs/: architecture.md  manifest.md  tech-stack.md
mistgos-core/: Cargo.toml
mistgos-engine/: Cargo.toml
mistgos-engine/src/: main.rs  vga_buffer.rs
mistgos-shard/: Cargo.toml
